Replace pthread_yeild() with sched_yield().

The latter is POSIX standard whereas the former is apparently not.

Patch contributed by Adam Schaefers, addressing these bugs:

https://bugzilla.kernel.org/show_bug.cgi?id=206741
https://github.com/kisslinux/community/issues/495

Signed-off-by: Andrew G. Morgan <morgan@kernel.org>